force-app/main/default/objects/OrderItem__c.object
<CustomObject>
    <fields>
        <fullName>BasePrice__c</fullName>
        <label>Precio Base €/l</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaseTotal__c</fullName>
        <formula>BasePrice__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <formula>TotalAmount__c -  BaseTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MinimalPrice__c</fullName>
        <label>Precio Mínimo €/l</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MinimalTotal__c</fullName>
        <formula>MinimalPrice__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Mínimo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pedido__c</fullName>
        <label>Pedido</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Líneas de pedido</relationshipLabel>
        <relationshipName>Lineas_de_pedido</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <formula>ProductDescription__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código del producto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Descripción del Producto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Líneas de pedido</relationshipLabel>
        <relationshipName>Lineas_de_pedido</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Cantidad(l)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <formula>Quantity__c  *  UnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Precio €/l</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <label>Línea de pedido</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Pedido__c</columns>
        <columns>ProductDescription__c</columns>
        <columns>Quantity__c</columns>
        <columns>UnitPrice__c</columns>
        <columns>TotalAmount__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>LP-{0}</displayFormat>
        <label>Nº línea de pedido</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Líneas de pedido</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>